<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校课网</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="please_input_email_address">请输入邮箱地址</string>
    <string name="please_input_password">请输入密码</string>
    <string name="reginst">注册</string>
    <string name="welcome_join_school_course">新生报到！</string>
    <string name="password_is_num_between_six_sixteen">密码为6~16位数字或字母</string>
    <string name="reinput_password">请再次输入密码</string>
    <string name="email_can_not_empoty">邮箱不能为空！</string>
    <string name="password_can_not_empty">密码不能为空！</string>
    <string name="login_fail">登录失败！</string>
    <string name="user_do_not_exist">用户不存在！</string>
    <string name="password_not_right">密码不正确！</string>
    <string name="please_input_password_agin">请再次输入密码！</string>
    <string name="two_times_input_password_not_same">两次输入密码不一致！</string>
    <string name="register_success">注册成功！</string>
    <string name="register_fail">注册失败！</string>
    <string name="my">我的</string>
    <string name="course">课堂</string>
    <string name="newcourse">最新</string>
    <string name="hotcourse">热门</string>
    <string name="recommendcourse">推荐</string>
    <string name="get_school_list_fail">获取学校列表上失败！</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="last_refresh_time">上次刷新时间：</string>
    <string name="all_dept">所有院系</string>
    <string name="fail_to_getdept_list">获取院系列表失败！</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_ready">松开刷新</string>
    <string name="listview_header_hint_loading">正在加载...</string>
    <string name="listview_footer_hint_normal">查看更多</string>
    <string name="listview_footer_hint_ready">松开载入更多</string>
    <string name="listview_header_hint_end">已加载完数据</string>
    <string name="Individual_center">个人中心</string>
    <string name="info">详细</string>
    <string name="discuss">讨论</string>
    <string name="note">笔记</string>
    <string name="list">章节</string>
    <string name="course_instruction">课程介绍</string>
    <string name="techer_instruction">名师简介</string>
    <string name="send">提交</string>
    <string name="write_discuss_content">写评论...</string>
    <string name="reply_can_not_empty">评论内容不能为空！</string>
    <string name="reply_success">评论成功！</string>
    <string name="reply_send_fail">评论发送失败！</string>
    <string name="my_discuss">我的提问</string>
    <string name="my_note">我的笔记</string>
    <string name="my_collect">我的收藏</string>
    <string name="study_plan">学习计划</string>
    <string name="setting_center">设置中心</string>
    <string name="load_fail">加载失败！</string>
    <string name="discuss_list_is_null">讨论列表为空！</string>
    <string name="fail_load_note">获取笔记列表失败！</string>
    <string name="note_list_is_empoty">笔记列表为空！</string>
    <string name="fail_get_chapter_list">获取章节列表失败！</string>
    <string name="send_discuss">答疑解惑</string>
    <string name="send_note">发表笔记</string>
    <string name="collect_course">收藏课程</string>
    <string name="share_course">分享课程</string>
    <string name="cancel">取消</string>
    <string name="grade_for_course">请给课程评分：</string>
    <string name="please_write_down_your_question_for_course">请提出您学习过程中的疑问或见解...</string>

</resources>