<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/White" >

        <LinearLayout
            android:id="@+id/lay_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/img_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cacel"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Bule" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/reginst"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Bule" />
    </RelativeLayout>

    <com.lifeidroid.schooltech.Tools.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/img_app_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_join_school_course"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Bule" />

    <EditText
        android:id="@+id/et_reginst_email"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/et_shape"
        android:hint="@string/please_input_email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_reginst_password"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_shape"
        android:hint="@string/please_input_password"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_is_num_between_six_sixteen"
        android:textColor="@color/light_Blank" />

    <EditText
        android:id="@+id/et_reginst_repassword"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_shape"
        android:hint="@string/reinput_password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/btn_reginst_reginst"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_login"
        android:text="@string/reginst"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/light_Blank" />

</LinearLayout>