<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/White" >

        <LinearLayout
            android:id="@+id/lay_coursemain_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/img_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cacel"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Bule" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_coursemain_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Blank" />

        <ImageView
            android:id="@+id/iv_coursemain_menu"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/img_course_menu_logo" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_coursemain_logo"
        android:layout_width="fill_parent"
        android:layout_height="200dp" />

    <RadioGroup
        android:id="@+id/rg_coursemain_select"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_courseinfo"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/rb_left"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/info" />

        <RadioButton
            android:id="@+id/rb_coursediscuss"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/rb_middle"
            android:button="@null"
            android:gravity="center"
            android:text="@string/discuss" />

        <RadioButton
            android:id="@+id/rb_coursenote"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/rb_middle"
            android:button="@null"
            android:gravity="center"
            android:text="@string/note" />

        <RadioButton
            android:id="@+id/rb_courselist"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/rb_right"
            android:button="@null"
            android:gravity="center"
            android:text="@string/list" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/lay_coursemain_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>