<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/White"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Bule" />
    </LinearLayout>

    <com.lifeidroid.schooltech.Tools.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/img_app_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="校课网欢迎您！"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Bule" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@drawable/et_shape"
                android:hint="@string/please_input_email_address"
                android:inputType="textEmailAddress"
                android:paddingLeft="35dp"
                android:textColor="@color/Blank"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignLeft="@id/et_login_email"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2dp"
                android:src="@drawable/img_user" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@drawable/et_shape"
                android:hint="@string/please_input_password"
                android:inputType="textPassword"
                android:paddingLeft="35dp"
                android:singleLine="true" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignLeft="@id/et_login_password"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2dp"
                android:src="@drawable/img_passowrd" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_login"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/btn_reginst"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_reginst"
            android:text="@string/reginst"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/light_Blank" />
    </LinearLayout>

</LinearLayout>