<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/White" >

        <ImageView
            android:id="@+id/iv_coursediscuss_reply_backimg"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/img_back" />

        <TextView
            android:id="@+id/tv_coursediscuss_reply_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_coursediscuss_reply_backimg"
            android:text="@string/cacel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Bule" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/discuss"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Bule" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:text="@string/send"
            android:id="@+id/tv_coursediscuss_reply_send"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Bule" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/cell_shape"
        android:orientation="horizontal" >

        <com.lifeidroid.schooltech.Tools.CircleImageView
            android:id="@+id/iv_coursediscuss_reply_head"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            app:border_color="@color/light_Gray"
            app:border_width="1dp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tv_coursediscuss_reply_nike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Blank" />

            <TextView
                android:id="@+id/tv_coursediscuss_reply_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/light_Blank" />

            <TextView
                android:id="@+id/tv_coursediscuss_reply_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_coursediscuss_reply_nike"
                android:layout_marginTop="3dp"
                android:paddingRight="5dp"
                android:textColor="@color/light_Blank" />
        </RelativeLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/et_coursediscuss_reply_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="@drawable/cell_shape"
        android:hint="@string/write_discuss_content"
        android:gravity="top"
        android:padding="2dp" />

</LinearLayout>